<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toBarcode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name_custom"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp"
            android:textStyle="bold" />

    </FrameLayout>

    <include
        layout="@layout/horizontal_line"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/showData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <include layout="@layout/horizontal_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/toLeftLeft"
            style="@style/ImgStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:contentDescription="@string/barcode_page"
            android:onClick="onClick"
            android:src="@drawable/main_click" />

<!--        <include layout="@layout/vertical_line" />-->

<!--        <ImageView-->
<!--            android:id="@+id/toLeft"-->
<!--            style="@style/ImgStyle"-->
<!--            android:contentDescription="@string/main_page"-->
<!--            android:onClick="onClick"-->
<!--            android:src="@drawable/main_click" -->
<!--            />-->

        <include layout="@layout/vertical_line" />

        <ImageView
            android:id="@+id/toRight"
            style="@style/ImgStyle"
            android:contentDescription="@string/settings_page"
            android:onClick="onClick"
            android:src="@drawable/set_noclick" />

        <include layout="@layout/vertical_line" />

        <ImageView
            android:id="@+id/searchTag"
            style="@style/ImgStyle"
            android:contentDescription="@string/search_tag"
            android:onClick="onClick"
            android:src="@drawable/search_noclcik" />

        <include layout="@layout/vertical_line" />
    </LinearLayout>
</LinearLayout>