<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MBank" />

        <Spinner
            android:id="@+id/spinner_MB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/search_filter" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        tools:visibility="visible">


        <CheckBox
            android:id="@+id/enable_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Filter Text" />
        <EditText
            android:id="@+id/Et_set_ads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:maxLength="6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/length"
            android:visibility="gone"
            tools:visibility="gone" />

        <EditText
            android:id="@+id/Et_Set_len"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="4"
            android:visibility="gone"
            tools:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/acs_pswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aces_pwd"
            android:visibility="gone"
            tools:visibility="gone" />

        <EditText
            android:id="@+id/Et_AcPwdRead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="8"
            android:visibility="gone"
            tools:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_hexadecimal"
            android:visibility="gone"
            tools:visibility="gone" />

        <EditText
            android:id="@+id/Et_Set_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="24"
            android:inputType="none"
            android:visibility="gone"
            tools:visibility="gone" />

    </LinearLayout>
</LinearLayout>